--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: Hexo
+title: Aaron Miller | Applied Mathematics Ph.D. Student at Harvard
 subtitle: ''
 description: ''
 keywords: null
-author: John Doe
+author: Aaron Miller
 language: en
 timezone: ''
 url: http://aa-mill.github.io/blog
